--- a/west_coast_radio_android/West Coast Radio Player/app/src/main/res/values/strings.xml
+++ b/west_coast_radio_android/West Coast Radio Player/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MidwestRadio</string>
-    <string name="midwest_radio_player">Midwest Radio Player</string>
+    <string name="app_name">West Coast Radio Player</string>
+    <string name="west_coast_radio_player">West Coast Radio Player</string>
     <string name="less_than"><![CDATA[<]]></string>
     <string name="_104_1">104.1</string>
     <string name="play">PLAY</string>
